# bitcraft

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: schema_parse.rs
crates/bitcraft/: Cargo.toml
crates/bitcraft-transform/: Cargo.toml
crates/bitcraft-transform/src/: lib.rs
crates/bitcraft-wasm/: Cargo.toml
crates/bitcraft-wasm/src/: convert.rs  lib.rs  schema_def.rs  transform_def.rs
crates/bitcraft/benches/: schema_parse.rs
crates/bitcraft/src/: assembly.rs  bits.rs  compiled.rs  errors.rs  field.rs  fragment.rs  lib.rs  schema.rs  serde.rs  transform.rs
crates/bitspec/: Cargo.toml  README.md
crates/bitspec-wasm/: Cargo.toml
crates/bitspec-wasm/src/: lib.rs
crates/bitspec/benches/: parse.rs  schema_parse.rs  serialize.rs
crates/bitspec/src/: assembly.rs  bits.rs  compiled.rs  errors.rs  field.rs  fragment.rs  lib.rs  schema.rs  serde.rs  transform.rs  value.rs
crates/bitspec/tests/: prop_parse.rs  prop_roundtrip.rs  prop_transform.rs
src/: bit_reader.rs  compiled.rs  errors.rs  fragment.rs  lib.rs  schema.rs
