[package]
name = "bitcraft-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitcraft = { path = "../bitcraft" }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.149"
wasm-bindgen = { version = "0.2.108", features = ["serde"] }
