[package]
name = "bitcraft-wasm"
version = "0.1.0"
edition = "2024"
description = "WASM bindings for the bitcraft binary schema and transform engine"

[lib]
crate-type = ["cdylib"]

[dependencies]
bitcraft = { path = "../bitcraft", features = ["serde"] }
bitcraft-transform = { path = "../bitcraft-transform" }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.149"
wasm-bindgen = { version = "0.2.108", features = ["serde"] }
