[package]
name = "bitspec-wasm"
version = "0.1.0"
edition = "2024"
authors = ["Valera Dolgov <sxmebytes@gmail.com>"]
description = "WebAssembly bindings for the bitspec schema engine."
repository = "https://github.com/somebytes/bitspec"
license = "MIT"
readme = "README.md"
keywords = ["bitspec", "wasm", "bindings", "binary", "parser"]
categories = ["wasm", "parser-implementations"]

[lib]
crate-type = ["cdylib"]

[dependencies]
bitspec = { path = "../bitspec", features = ["serde", "transform"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.149"
wasm-bindgen = { version = "0.2.108", features = ["serde"] }
